crates/sgf-core/tests/snapshots/ops_planet_modifier/barren_4_5.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Add modifier terraforming_candidate to planet #585
inverse: RemoveBodyModifier { body: 585, modifier: "terraforming_candidate", feature: None }

--- gamestate
+++ gamestate
@@ -110114,6 +110114,18 @@
 			{
 			}
 			bombardment_damage=0
+			timed_modifier=
+			{
+				items=
+				{
+					
+					{
+						modifier="terraforming_candidate"
+						days=-1
+					}
+ 
+				}
+			}
 			entity=2
 		}
 		586=
