crates/sgf-core/tests/snapshots/ops_planet_modifier/feature_4_5.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Added planet feature pm_mineral_poor (mineral_poor) to planet #585
inverse: RemoveBodyModifier { body: 585, modifier: "mineral_poor", feature: Some("pm_mineral_poor") }

--- gamestate
+++ gamestate
@@ -110114,6 +110114,19 @@
 			{
 			}
 			bombardment_damage=0
+			timed_modifier=
+			{
+				items=
+				{
+					
+					{
+						modifier="mineral_poor"
+						days=-1
+					}
+ 
+				}
+			}
+			planet_modifier="pm_mineral_poor"
 			entity=2
 		}
 		586=
