crates/sgf-core/tests/snapshots/ops_planet_modifier/frozen_moon_4_5.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Add modifier frozen_terraforming_candidate to planet #40
inverse: RemovePlanetModifier { planet: 40, modifier: "frozen_terraforming_candidate", feature: None }

--- gamestate
+++ gamestate
@@ -81673,6 +81673,11 @@
 						days=3426
 					}
  
+					{
+						modifier="frozen_terraforming_candidate"
+						days=-1
+					}
+ 
 				}
 			}
 			flags=
