crates/sgf-core/tests/snapshots/ops_planet_modifier/remove_timed_4_5.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Removed modifier harvested_resources_mining from planet #40
inverse: AddBodyModifier { body: 40, modifier: "harvested_resources_mining", days: [3426], feature: None }

--- gamestate
+++ gamestate
@@ -81663,18 +81663,6 @@
 			{
 			}
 			bombardment_damage=0
-			timed_modifier=
-			{
-				items=
-				{
-					
-					{
-						modifier="harvested_resources_mining"
-						days=3426
-					}
- 
-				}
-			}
 			flags=
 			{
 				starting_deposit=62808000
